fixes size and spacing of about me section

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,7 +90,7 @@ hr.star-primary {
 
 .about {
 	height: 50vh;
-	margin-top: 25vh;
+	padding-top: 25vh;
 }
 
 .about > a {
